--- a/Aula-04/ex001.html
+++ b/Aula-04/ex001.html
@@ -21,6 +21,9 @@
     <h1>Olá, mundo!</h1>
     <p>Tô de boa.</p>
     <script>
+        //Fazendo um comentario em unica linha
+        /*Fazendo comentario em mais de 
+        uma linha*/
         window.alert('Minha primeira mensagem!')
         window.confirm('Está gostando de JScripty?')
         window.prompt('Qual é o seu nome?')
